# AA-GNU-GCC

./: Makefile.am  Makefile.in  README.md  Setup.sh  configure  configure.ac
Sources/: Makefile.am  Makefile.in
Sources/API/: Logos.h  include.h
Sources/API/JoinPieces/: JoinIconChat.c  JoinTriangles.c
Sources/API/JoinPieces/.deps/: __top_builddir__bin_Assets-JoinIconChat.Po  __top_builddir__bin_Assets-JoinTriangles.Po
Sources/API/Shapes/: ColoredTriangle.c  OutlinedTriangle.c  Polygon.c  Rhombus.c
Sources/API/Shapes/.deps/: __top_builddir__bin_Assets-ColoredTriangle.Po  __top_builddir__bin_Assets-OutlinedTriangle.Po  __top_builddir__bin_Assets-Polygon.Po  __top_builddir__bin_Assets-Rhombus.Po
Sources/API/Utilities/.deps/: __top_builddir__bin_Assets-CP.Po
Sources/Assets/: Callbacks.c  CopyFiles.c  HTML.c  Logo.c  Main.c
