#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_PREREQ([2.69])
AC_INIT([AssetsApplication], [3.0-beta-1.20160827-alpha], [gage@christoffen.com])
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([Sources])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 Sources/Assets/Makefile])

AC_CONFIG_SUBDIRS([asset-generator-0.1])
AC_OUTPUT

